--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
     
-    <title>React App</title>
+    <title>GPFS Archiver</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
